_INSTALL_/01-ACM/configure-observability/optional-minio/minio-operator/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: console-minio
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: console
    weight: 100
  wildcardPolicy: None
